<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".registerActivity">

    <TextView
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="-1dp"
        android:gravity="center"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="-2dp"
        android:gravity="center"
        android:text="@string/Register_note"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="321dp"
        android:background="#929F98"
        android:drawableLeft="@drawable/ic_lock_logo"
        android:ems="10"
        android:hint="  Confirm Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:background="#929F98"
        android:drawableLeft="@drawable/ic_email_logo"
        android:ems="10"
        android:hint="  E-mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:background="#929F98"
        android:drawableLeft="@drawable/ic_person_logo"
        android:ems="10"
        android:hint="  Username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
       android:layout_marginTop="251dp"
        android:background="#929F98"
        android:drawableLeft="@drawable/ic_lock_logo"
        android:ems="10"
        android:hint="  Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />


    <Button
        android:id="@+id/signup"
        android:onClick="signedup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:background="@drawable/loginbutton"
        android:foreground="?attr/selectableItemBackground"
        android:text="Create Account"
        android:textAllCaps="false"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="226dp"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/genderSelect_spinner"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="221dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="#07da63"
        android:backgroundTintMode="add"
        android:foregroundTint="#FFF6F6"
        android:popupBackground="#929F98" />

    <Button
        android:id="@+id/select_date"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="165dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/loginbutton"
        android:text="+" />

    <TextView
        android:id="@+id/birthDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"


        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginBottom="148dp"
        android:text="@string/birthDate"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>