<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".loginActivity">

    <Button
        android:id="@+id/register"
        android:onClick="register"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:background="@drawable/loginbutton"
        android:foreground="?attr/selectableItemBackground"
        android:text="Register here"
        android:textAllCaps="false"
        android:textSize="16dp" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="-1dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="-2dp"
        android:gravity="center"
        android:text="@string/login_note"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="239dp"
        android:background="#929F98"
        android:drawableLeft="@drawable/ic_person_logo"
        android:ems="10"
        android:hint="  Username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="363dp"
        android:background="#929F98"
        android:drawableLeft="@drawable/ic_lock_logo"
        android:ems="10"
        android:hint="  Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/signin"
        android:onClick="login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="268dp"
        android:background="@drawable/loginbutton"
        android:foreground="?attr/selectableItemBackground"
        android:text="Sign in"
        android:textAllCaps="false"
        android:textSize="20dp" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="-2dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="561dp"
        android:layout_marginEnd="-1dp"
        android:gravity="center"
        android:text=" Don't have an account yet ?"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="170dp"
        android:background="@color/white_smoke" />


</RelativeLayout>